[refactor] 불필요 생성자 제거 및 List.of() 로 변경