@@ -8,15 +8,14 @@ import java.util.List;
 import static org.assertj.core.api.Assertions.assertThat;
 
 class LadderTest {
-
     @Test
     void 사다리_생성() {
-        List<Point> points = Arrays.asList(
+        List<Point> points = List.of(
                 new Point(false, true),
                 new Point(true, false),
                 new Point(false, false));
         Line line = new Line(points);
-        Ladder ladder = new Ladder(line);
-        assertThat(ladder).isEqualTo(new Ladder(line));
+        Ladder ladder = new Ladder(List.of(line));
+        assertThat(ladder).isEqualTo(new Ladder(List.of(line)));
     }
 }
